# Opis

./: .gitignore  GA_PLAN.md  OPIS_SYSTEM_OUTLINE.md  OpisDescription.md  README.md
agents/: Cargo.toml
agents/ca/: agent.py  manifest.py  prompts.py  real_adapter.py  runner.py
agents/environments/: ai_dev_sandbox.md  mac_workstation.md  opis_repo.md
agents/fa/: __init__.py  adr.py  agent.py  prompts.py  runner.py
agents/gates/: ack_completion_recorder.md  acknowledging_command_executor.md  assignment_tracker.md  auth_token.md  claims_issuing_sentinel.md  claims_scoped_catalogue_writer.md  command_completion_recorder.md  completion_finalizer.md  delivery_router.md  driver_dispatcher.md  event_recorder.md  event_reward_accumulator.md  index.md  loyalty_processor.md  menu_manager.md  order_intake.md  order_validator.md  payment_authorizer.md  payment_processor.md  pickup_estimator.md  producer_submitter.md  provider_query_resolver.md  queue_based_estimator.md  repeat_event_throttle.md  reward_accumulator.md  routed_command_dispatcher.md  routing_decision_aggregator.md  scoped_catalogue_writer.md  sentinel_auth.md  zone_regulator.md
agents/input/: ripple_rides.md  silicon_sandwiches.md
agents/katas/: aegiswatch_threat_detection.md  agentmesh_multiagent.md  dockyard_fulfillment.md  encore_tickets.md  opis_workbench.md  oracleserve_ai_inference.md  sentrygrid_monitoring.md  surveyorswarm_planetary.md  titantrain_ml_training.md  triageflow_ed.md
agents/latencies/: index.md  latencies.json
agents/output/: README.md
agents/patterns/: 001-coincidence-drop.md
(+198 files in other folders)
